--- a/index.html
+++ b/index.html
@@ -4,8 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sof.marques portfolio</title>
+    <style>
+        p{
+            color: red;
+        }
+        h1{
+            color: brown;
+        }
+        body{
+            background: beige;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        a{
+            text-decoration: none;
+        }
+
+    </style>
 </head>
 <body>
-    Ciao a tutti! Benvenuti nel mio portfolio :))))
+
+<h1>Ciao Mondo! Benvenuti nel mio portfolio :))))</h1>
+
+<p>
+    i miei links:<br>
+    <a target="_blank" href="https://www.instagram.com/sof.marques/?igsh=ZzkxdHplbm9tNHRt&utm_source=qr">IG</a><br>
+</p>
+
+<p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean feugiat feugiat tortor. Quisque et nunc nisi. Integer sit amet volutpat dui. Integer sagittis nunc lectus, vel egestas turpis tempor nec. In bibendum nec lectus ac vestibulum. Nulla quis luctus libero. Duis sed vehicula nulla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aliquam at velit dignissim turpis venenatis luctus et quis ipsum.
+    Morbi lobortis ullamcorper urna, nec lacinia lectus iaculis id. Ut quam nisl, commodo et mollis in, tempus et sem. Curabitur tincidunt nisi non rhoncus efficitur. Suspendisse vel imperdiet urna. Donec ultrices est non nibh feugiat hendrerit. Sed id nulla vel nulla ultricies elementum. Phasellus rhoncus est id sapien viverra fringilla tempus vitae quam. Nullam eu mauris ut tortor porttitor porta semper eu urna. 
+</p>  
+
+<img src="https://www.wondergifts.ae/cdn/shop/files/5e389000-3819-4601-81ca-dd247858c09a_d71035a8-9b26-4fd4-8313-68d0eb1a764f_1400x.jpg?v=1719018821">
+
+
+
 </body>
 </html>
