--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
             position: relative;
             z-index: 5;
         }
+
+        .paragrafo{
+            padding: 20px;
+        }
     </style>
 </head>
 
@@ -90,10 +94,14 @@
         <p>
             Social<br>
             <a target="_blank" href="https://www.instagram.com/sof.marques/?igsh=ZzkxdHplbm9tNHRt&utm_source=qr">
-                IG
+                IG @sof.marques
             </a>
+            
         </p>
     </div>
+    <p class="paragrafo">
+        Questi sito racchiude tutti gli esercizi realizzati durante un seminario di codice.
+    </p>
 
 </body>
 </html>
