--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
             font-family: Arial, Helvetica, sans-serif;
             margin: 0;
             padding: 0;
-            color: rgb(138, 138, 138);
+            color: rgb(120, 120, 120);
         }
 
         a {
-            color: rgb(129, 129, 129);
+            color: rgb(37, 37, 37);
             text-decoration: none;
         }
 
-        /* TOP BAR */
+ 
         .top-bar {
             display: flex;
             justify-content: space-between;
@@ -31,7 +31,7 @@
             z-index: 10;
         }
 
-        /* IMAGE CENTER (overlay) */
+
         .image-wrapper {
             position: fixed;
             top: 50%;
@@ -41,11 +41,11 @@
         }
 
         .image-wrapper img {
-            width: 20vw;
+            width: 17vw;
             height: auto;
         }
 
-        /* TITLE */
+
         .portfolio-title {
             height: 100vh;
             display: flex;
@@ -62,7 +62,7 @@
             text-transform: uppercase;
         }
 
-        /* SOCIAL */
+
         .social {
             padding: 20px;
             position: relative;
@@ -87,7 +87,7 @@
     </div>
 
     <div class="portfolio-title">
-        <h1>PORTFOLIO</h1>
+        <h1 style="font-weight: 200;">PORTFOLIO</h1>
     </div>
 
     <div class="social">
