--- a/giorno 2/es.4/index.html
+++ b/giorno 2/es.4/index.html
@@ -20,26 +20,21 @@
 function draw(){
   background(0)
   noStroke()
-for(let j=0; j<25; j++){
-    for(let i=0; i<25; i++){
+
+  let numH = 30
+  let numV = 20
+  let d = 10
+
+  let ox = (width - (numH - 1) * d) / 2
+  let oy = (height - (numV - 1) * d) / 2
+for(let j=0; j<numV; j++){
+    for(let i=0; i<numH; i++){
       fill(i * 10, j * 10, 255-i*10)
       let px = 110 + i * 13
       let py = 110 + j * 13
       circle(px, py, 6)
     }}
 
-  //circle(10, 10, 6)
-  //circle(20, 10, 6)
-  //circle(30, 10, 6)
-  //circle(40, 10, 6)
-  //circle(50, 10, 6)
-  //circle(60, 10, 6)
-  //circle(70, 10, 6)
-  //circle(80, 10, 6)
-  //circle(90, 10, 6)
-  //circle(100, 10, 6)
-  //circle(110, 10, 6)
-  //circle(120, 10, 6)
 }
   </script>  
 </body>
