--- a/esercizi/es.6/index.html
+++ b/esercizi/es.6/index.html
@@ -13,30 +13,33 @@
 <body>
 <script src="https://cdn.jsdelivr.net/npm/p5@1.9.2/lib/p5.js"></script>
   <script>
+    function preload(){
+      faccia = loadImage('faccia.png')
+    }
     function setup(){
       createCanvas(512, 384)
+      faccia.resize(faccia.width/ 7, faccia.height/7)
 
     }
 function draw(){
   background(0)
   noStroke()
-for(let j=0; j<20; j++){
-    for(let i=0; i<12; i++){
-      circle(10 + i * 10, 10 + j * 10, 6)
-    }}
 
-  //circle(10, 10, 6)
-  //circle(20, 10, 6)
-  //circle(30, 10, 6)
-  //circle(40, 10, 6)
-  //circle(50, 10, 6)
-  //circle(60, 10, 6)
-  //circle(70, 10, 6)
-  //circle(80, 10, 6)
-  //circle(90, 10, 6)
-  //circle(100, 10, 6)
-  //circle(110, 10, 6)
-  //circle(120, 10, 6)
+  let numH = faccia.width
+  let numV = faccia.height
+  let d = 8
+
+  let ox = (width - (numH - 1) * d) / 2
+  let oy = (height - (numV - 1) * d) / 2
+for(let j=0; j<numV; j++){
+    for(let i=0; i<numH; i++){
+      fill(faccia.get(i, j))
+      let px = 110 + i * 13
+      let py = 110 + j * 13
+      circle(px, py, 6)
+    }}
+    image(faccia, 0, 0)
+
 }
   </script>  
 </body>
