--- a/esercizi/es.1/index.html
+++ b/esercizi/es.1/index.html
@@ -85,10 +85,10 @@
         }
 
         .portfolio-title h1 {
-            font-size: 17vw;
+            font-size: 12vw; /* Calcolato per adattare "PORTFOLIO" alla larghezza dello schermo */
             line-height: 1;
             margin: 0 0 -5vh 0; /* Sposta il titolo leggermente più in basso */
-            padding: 20px;
+            padding: 20px 0; /* Rimosso padding laterale per toccare i bordi */
             text-transform: uppercase;
             font-weight: 200;
             will-change: transform; /* Ottimizza l'animazione */
