--- a/giorno 1/es.1/index.html
+++ b/giorno 1/es.1/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sof.marques portfolio</title>
 
-    <!-- Google Fonts: Montserrat per un look più moderno -->
+
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;600&display=swap" rel="stylesheet">
 
     <style>
@@ -15,7 +15,7 @@
             margin: 0;
             padding: 0;
             color: rgb(120, 120, 120);
-            min-height: 200vh; /* Altezza minima per garantire lo scroll iniziale, ma può crescere */
+            min-height: 200vh; 
             overflow-x: hidden;
         }
 
@@ -26,7 +26,7 @@
             transition: color 0.3s ease;
         }
 
-        /* Animazione sottolineatura al passaggio del mouse */
+      
         a::after {
             content: '';
             position: absolute;
@@ -42,7 +42,7 @@
             width: 100%;
         }
 
-        /* NAV */
+
         .top-bar {
             display: flex;
             justify-content: space-between;
@@ -54,11 +54,11 @@
             box-sizing: border-box;
             z-index: 10;
 
-            background: white;              /* ← SFONDO BIANCO */
-            border-bottom: 1px solid #eee;  /* opzionale */
+            background: white;             
+
         }
 
-        /* IMMAGINE */
+
         .image-wrapper {
             position: fixed;
             top: 50%;
@@ -74,7 +74,7 @@
             height: auto;
         }
 
-        /* TITOLO */
+
         .portfolio-title {
             height: 100vh;
             display: flex;
@@ -85,16 +85,16 @@
         }
 
         .portfolio-title h1 {
-            font-size: 12vw; /* Calcolato per adattare "PORTFOLIO" alla larghezza dello schermo */
+            font-size: 17vw;
             line-height: 1;
-            margin: 0 0 -5vh 0; /* Sposta il titolo leggermente più in basso */
-            padding: 20px 0; /* Rimosso padding laterale per toccare i bordi */
+            margin: 0 0 -5vh 0; 
+            padding: 20px 0;
             text-transform: uppercase;
             font-weight: 200;
-            will-change: transform; /* Ottimizza l'animazione */
+            will-change: transform; 
         }
 
-        /* Contenitore per centrare il contenuto in basso */
+
         .content-container {
             max-width: 800px;
             margin: 0 auto;
@@ -113,58 +113,58 @@
             line-height: 1.6;
         }
 
-        /* --- GALLERIA FOTO --- */
+
         .gallery-container {
             display: grid;
-            grid-template-columns: repeat(4, 1fr); /* 4 colonne sulla stessa linea */
-            gap: 15px; /* Spazio tra le foto ridotto */
+            grid-template-columns: repeat(4, 1fr); 
+            gap: 15px; 
             max-width: 900px;
-            margin: 80px auto; /* Spazio sopra/sotto e centratura */
+            margin: 80px auto; 
             padding: 0 20px;
         }
 
         .gallery-item {
             display: block;
-            position: relative; /* Necessario per posizionare l'overlay */
-            overflow: hidden; /* Nasconde ciò che esce dagli angoli arrotondati */
-            aspect-ratio: 4 / 3; /* Proporzioni della foto (es. 4:3) */
-            background-color: #f0f0f0; /* Colore segnaposto se l'immagine non carica */
+            position: relative; 
+            overflow: hidden; 
+            aspect-ratio: 4 / 3; 
+            background-color: #f0f0f0; 
             background-size: cover;
             background-position: center;
-            border-radius: 8px; /* Angoli arrotondati */
+            border-radius: 8px; 
 
-            /* Stato iniziale per l'animazione allo scroll */
+ 
             opacity: 0;
             transform: translateY(20px);
             transition: opacity 0.6s ease-out, transform 0.6s ease-out, box-shadow 0.3s ease;
             will-change: opacity, transform;
         }
 
-        /* Stato quando l'elemento diventa visibile */
+ 
         .gallery-item.is-visible {
             opacity: 1;
             transform: translateY(0);
         }
 
         .gallery-item:hover {
-            transform: scale(1.03); /* Leggero ingrandimento al passaggio del mouse */
+            transform: scale(1.03); 
             box-shadow: 0 15px 30px rgba(0, 0, 0, 0.15);
         }
 
-        /* Overlay con titolo che appare su hover */
+  
         .gallery-item-overlay {
             position: absolute;
             bottom: 0;
             left: 0;
             width: 100%;
-            padding: 20px 15px 15px; /* Spazio ridotto per adattarsi alle card più piccole */
+            padding: 20px 15px 15px;
             display: flex;
             flex-direction: column;
-            justify-content: flex-end; /* Allinea il testo in basso */
+            justify-content: flex-end; 
             color: white;
             background: linear-gradient(to top, rgba(0, 0, 0, 0.8) 0%, transparent 100%);
             opacity: 0;
-            transform: translateY(10px); /* Parte leggermente più in basso */
+            transform: translateY(10px);
             transition: opacity 0.3s ease, transform 0.3s ease;
         }
 
@@ -175,7 +175,7 @@
 
         .gallery-item-overlay h3 {
             margin: 0 0 5px 0;
-            font-size: 1.1rem; /* Testo più piccolo */
+            font-size: 1.1rem;
             font-weight: 600;
         }
 
@@ -185,7 +185,7 @@
             font-weight: 200;
         }
 
-        /* Responsive: su schermi piccoli, le foto vanno in una colonna */
+  
         @media (max-width: 768px) {
             .gallery-container {
                 grid-template-columns: 1fr;
@@ -221,15 +221,16 @@
         </p>
     </div>
 
-    <!-- Sezione Galleria -->
+
     <div class="gallery-container">
-        <!-- Sostituisci '#' con il link, l'immagine, il titolo e la categoria -->
-        <a href="#" class="gallery-item" style="background-image: url('path/to/your/image1.jpg');">
+
+        <a target="_blank" href="esercizio 2/index.html" class="gallery-item" style="background-image: url('es.2.png');">
             <div class="gallery-item-overlay">
-                <h3>Seminario</h3>
-                <p>Esercizio 1</p>
+                <h3>3D Mask</h3>
+                <p>Esercizio 2</p>
             </div>
         </a>
+
         <a href="#" class="gallery-item" style="background-image: url('path/to/your/image2.jpg');">
             <div class="gallery-item-overlay">
                 <h3>Seminario</h3>
@@ -259,36 +260,35 @@
             const scrollY = window.scrollY;
             const fadeEnd = window.innerHeight * 0.7;
 
-            // Calcolo progressivo da 0 a 1
+
             let progress = scrollY / fadeEnd;
             progress = Math.min(Math.max(progress, 0), 1);
 
             const opacity = 1 - progress;
-            const scale = 1 - (progress * 0.15); // L'immagine si rimpicciolisce leggermente
-            const blur = progress * 5; // Aggiunge sfocatura progressiva
+            const scale = 1 - (progress * 0.15); 
+            const blur = progress * 5;
 
             image.style.opacity = opacity;
             image.style.transform = `translate(-50%, -50%) scale(${scale})`;
             image.style.filter = `blur(${blur}px)`;
 
-            // Effetto Parallax sul titolo (si muove più lentamente dello scroll)
             title.style.transform = `translateY(${scrollY * 0.2}px)`;
         });
 
-        // --- Animazione Galleria allo Scroll ---
+
         const galleryItems = document.querySelectorAll('.gallery-item');
 
         const observerOptions = {
-            root: null, // usa il viewport
+            root: null, 
             rootMargin: '0px',
-            threshold: 0.1 // l'animazione parte quando il 10% dell'elemento è visibile
+            threshold: 0.1 
         };
 
         const observerCallback = (entries, observer) => {
             entries.forEach(entry => {
                 if (entry.isIntersecting) {
                     entry.target.classList.add('is-visible');
-                    observer.unobserve(entry.target); // Ferma l'osservazione dopo l'animazione
+                    observer.unobserve(entry.target);
                 }
             });
         };
@@ -296,7 +296,7 @@
         const observer = new IntersectionObserver(observerCallback, observerOptions);
 
         galleryItems.forEach((item, index) => {
-            item.style.transitionDelay = `${index * 100}ms`; // Aggiunge un ritardo progressivo
+            item.style.transitionDelay = `${index * 100}ms`; 
             observer.observe(item);
         });
     </script>
