--- a/giorno 1/es.1/esercizio 2/index.html
+++ b/giorno 1/es.1/esercizio 2/index.html
@@ -9,15 +9,60 @@
 			background-color: rgb(255, 248, 222);
 			height: 100vh;
 			display: flex;
-			justify-content: center;
-			align-items: center;
 			margin: 0;
 		}
+
+		.picture{
+			justify-content: center;
+			align-items: center;
+		}
+		a {
+            color: rgb(0, 0, 0);
+            text-decoration: none;
+            position: relative;
+            transition: color 0.3s ease;
+        }
+
+      
+        a::after {
+            content: '';
+            position: absolute;
+            width: 0;
+            height: 1px;
+            bottom: -2px;
+            left: 0;
+            background-color: rgb(37, 37, 37);
+            transition: width 0.3s ease;
+        }
+
+        a:hover::after {
+            width: 100%;
+        }
+
+
+        .top-bar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px;
+            position: fixed;
+            top: 0;
+            width: 100%;
+            box-sizing: border-box;
+            z-index: 10;
+
+            background: rgb(255, 248, 222);             
+
+        }
 	</style>
 </head>
 <body>
+	<div class="top-bar">
+        <div><a href="../index1.html">Torna alla home</a></div>
+    </div>
+	
 	<script src="https://cdn.jsdelivr.net/npm/p5@1.11.11/lib/p5.min.js"></script>
-	<script>
+	<script class="picture">
 
 		let faccia
 
@@ -63,5 +108,8 @@
 
 		}
 	</script>
+<div class="top-bar">
+        <div><a href="../index1.html"> Torna alla home</a></div>
+    </div>
 </body>
 </html>
