--- a/giorno 1/es.1/esercizio 2/index.html
+++ b/giorno 1/es.1/esercizio 2/index.html
@@ -6,10 +6,12 @@
 	<title>Document</title>
 	<style>
 		body {
-			background-color: rgb(255, 248, 222);
+			background-color: rgb(255, 203, 240);
 			height: 100vh;
 			display: flex;
 			margin: 0;
+			justify-content: center;
+			align-items: center;
 		}
 
 		.picture{
@@ -51,7 +53,7 @@
             box-sizing: border-box;
             z-index: 10;
 
-            background: rgb(255, 248, 222);             
+            background: rgb(255, 203, 240);             
 
         }
 	</style>
@@ -64,26 +66,26 @@
 	<script src="https://cdn.jsdelivr.net/npm/p5@1.11.11/lib/p5.min.js"></script>
 	<script class="picture">
 
-		let faccia
+		let flamingo
 
 		function preload() {
-			faccia = loadImage('faccia.png')
+			flamingo = loadImage('flamingo.png')
 		}
 
 		function setup() {
 			// creiamo un elemento canvas
-			createCanvas(800, 600)
-			faccia.resize(faccia.width / 5, faccia.height / 5)
+			createCanvas(800, 800)
+			flamingo.resize(flamingo.width / 5, flamingo.height / 5)
 		}
 
 		function draw(){
 			// sfondo nero
-			background(255, 248, 222)
+			background(255, 203, 240)
 			noStroke()
 
-			let numH = faccia.width
-			let numV = faccia.height
-			let d = 5
+			let numH = flamingo.width
+			let numV = flamingo.height
+			let d = 6
 			let ox = (width - (numH - 1) * d) / 2
 			let oy = (height - (numV - 1) * d) / 2
 
@@ -95,14 +97,15 @@
 
 			for (let j=0; j<numV; j++) {
 				for(let i=0; i<numH; i++) {
-					let col = faccia.get(i, j)
+					let col = flamingo.get(i, j)
 					let al = alpha(col)
 					if (al < 250) continue
 					let br = brightness(col)
-					fill(col)
 					let px = ox + i * d + map(noise( i * 0.02 + nx, j * 0.02 + ny, nz), 0, 1, -amount, amount)
 					let py = oy + j * d + map(noise( i * 0.02 + nx, j * 0.02 + ny, nz + 5), 0, 1, -amount, amount)
-					circle(px, py, br * 0.1)
+					fill(col)
+					circle(px, py, br * 0.04)
+					circle(px, py, br * 0.06)
 				}
 			}
 
