--- a/giorno1/esercizio3/index.html
+++ b/giorno1/esercizio3/index.html
@@ -9,25 +9,25 @@
 </head>
 <body style="background-color: rgb(255, 220, 230)">
 <div class="top-bar">
-        <div><a href="../index1.html">Torna alla home</a></div>
+        <div><a href="../index.html">Torna alla home</a></div>
     </div>
 <style>		
     a {
-            color: rgb(0, 0, 0);
+            color: rgb(255, 156, 230);
             text-decoration: none;
             position: relative;
             transition: color 0.3s ease;
         }
 
       
-        a::after {
+          a::after {
             content: '';
             position: absolute;
             width: 0;
             height: 1px;
             bottom: -2px;
             left: 0;
-            background-color: rgb(37, 37, 37);
+            background-color: rgb(255, 0, 247);
             transition: width 0.3s ease;
         }
 
@@ -46,8 +46,7 @@
             width: 100%;
             box-sizing: border-box;
             z-index: 10;
-
-            background: rgb(255, 220, 230);             
+            background-color: rgb(255, 220, 230);
 
         }
         </style>
