--- a/giorno1/index.html
+++ b/giorno1/index.html
@@ -127,6 +127,9 @@
         .gallery-item:nth-child(2) { top: 15%; left: 68%; }
         .gallery-item:nth-child(3) { top: 45%; left: 6%; }
         .gallery-item:nth-child(4) { top: 70%; left: 65%; }
+        .gallery-item:nth-child(5) { top: 95%; left: 5%; }
+        .gallery-item:nth-child(6) { top: 120%; left: 67%; }
+        .gallery-item:nth-child(7) { top: 145%; left: 4%; }
 
         .gallery-item.is-visible {
             opacity: 1;
