--- a/giorno1/index.html
+++ b/giorno1/index.html
@@ -186,7 +186,7 @@
 <body>
 
     <div class="top-bar">
-        <div><a href="#">Sof.Marques</a></div>
+        <div><a href="https://www.instagram.com/sof.marques/">Sof.Marques</a></div>
         <div><a href="#">About</a></div>
     </div>
 
@@ -230,7 +230,7 @@
         </div>
 
         <div class="gallery-item">
-            <a href="#" class="gallery-thumb" style="background-image: url('es.4.png');"></a>
+            <a href="esercizio4/index.html" class="gallery-thumb" style="background-image: url('es.4.png');"></a>
             <div class="gallery-info">
                 <h3>Seminario</h3>
                 <p>Esercizio 4</p>
@@ -244,27 +244,7 @@
                 <p>Esercizio 5</p>
             </div>
         </div>
-        <div class="gallery-item">
-            <a href="#" class="gallery-thumb" style="background-image: url('es.5.png');"></a>
-            <div class="gallery-info">
-                <h3>Seminario</h3>
-                <p>Esercizio 5</p>
-            </div>
-        </div>
-        <div class="gallery-item">
-            <a href="#" class="gallery-thumb" style="background-image: url('es.5.png');"></a>
-            <div class="gallery-info">
-                <h3>Seminario</h3>
-                <p>Esercizio 5</p>
-            </div>
-        </div>
-        <div class="gallery-item">
-            <a href="#" class="gallery-thumb" style="background-image: url('es.5.png');"></a>
-            <div class="gallery-info">
-                <h3>Seminario</h3>
-                <p>Esercizio 5</p>
-            </div>
-        </div>
+
     </div>
 
     <script>
