--- a/giorno1/esercizio3/index.html
+++ b/giorno1/esercizio3/index.html
@@ -17,6 +17,7 @@
             text-decoration: none;
             position: relative;
             transition: color 0.3s ease;
+            font-family: 'Montserrat', sans-serif;
         }
 
       
