--- a/giorno1/index.html
+++ b/giorno1/index.html
@@ -240,7 +240,7 @@
         </div>
 
         <div class="gallery-item">
-            <a href="https://sofiaribeiromarques.github.io/sof.marques_portfolio/giorno1/esercizio5/index.html" class="gallery-thumb" style="background-image: url('es.5.png');"></a>
+            <a href="https://sofiaribeiromarques.github.io/sof.marques_portfolio/giorno1/esercizio5" class="gallery-thumb" style="background-image: url('es.5.png');"></a>
             <div class="gallery-info">
                 <h3>Atomo</h3>
                 <p>Esercizio 5</p>
