--- a/giorno1/esercizio4/index.html
+++ b/giorno1/esercizio4/index.html
@@ -181,7 +181,7 @@ let wordData = [];
     }
 </script>
 <div class="top-bar">
-        <div><a href="../index.html">Torna alla home</a></div>
+        <div><a href="https://sofiaribeiromarques.github.io/sof.marques_portfolio/giorno1/">Torna alla home</a></div>
     </div>
 <style>		
     a {
