--- a/giorno1/esercizio3/index.html
+++ b/giorno1/esercizio3/index.html
@@ -9,7 +9,7 @@
 </head>
 <body style="background-color: rgb(255, 220, 230)">
 <div class="top-bar">
-        <div><a href="../index.html">Torna alla home</a></div>
+        <div><a href="https://sofiaribeiromarques.github.io/sof.marques_portfolio/giorno1/">Torna alla home</a></div>
     </div>
 <style>		
     a {
