--- a/giorno1/esercizio2/index.html
+++ b/giorno1/esercizio2/index.html
@@ -111,7 +111,7 @@
 		}
 	</script>
 <div class="top-bar">
-        <div><a href="../index.html"> Torna alla home</a></div>
+        <div><a href="https://sofiaribeiromarques.github.io/sof.marques_portfolio/giorno1/"> Torna alla home</a></div>
     </div>
 </body>
 </html>
