--- a/giorno1/index.html
+++ b/giorno1/index.html
@@ -234,7 +234,7 @@
         <div class="gallery-item">
             <a href="https://sofiaribeiromarques.github.io/sof.marques_portfolio/giorno1/esercizio4/index.html" class="gallery-thumb" style="background-image: url('es.4.png');"></a>
             <div class="gallery-info">
-                <h3>Seminario</h3>
+                <h3>Atomo</h3>
                 <p>Esercizio 4</p>
             </div>
         </div>
@@ -242,7 +242,7 @@
         <div class="gallery-item">
             <a href="https://sofiaribeiromarques.github.io/sof.marques_portfolio/giorno1/esercizio5" class="gallery-thumb" style="background-image: url('es.5.png');"></a>
             <div class="gallery-info">
-                <h3>Atomo</h3>
+                <h3>Laser</h3>
                 <p>Esercizio 5</p>
             </div>
         </div>
